Implement update, delete and complete action for Tasks
